[リファクタ] テストクラスおよびメソッドの整理と冗長な記述を削除
不要な`@BeforeEach`や未使用の`import`文を削除。テストメソッド内の冗長なラムダ式やチェーンメソッドを簡潔化し、可読性を向上させました。また、内部ロジックの一部修正により一部メソッドの挙動を調整しました。